# medical_fl

./: .gitignore  README.md  pyproject.toml  pyproject2.toml
medical_fl/: __init__.py  client.py  data.py  eval.py  method.py  model.py  server_app.py  strategy.py  task.py  test_model.py  train.py  transforms.py  utils.py  view.py
notebooks/: centralized.ipynb  client.ipynb  gemini.ipynb  medmnist_view.ipynb  plot_curves.ipynb  scafold.ipynb  server.ipynb  torchParam.ipynb
scripts/: iid_multiple_partitions.py  test_train.py
